Update test code
1. Add window demo
2. Update main picture

--- a/src/Theme.xaml
+++ b/src/Theme.xaml
@@ -3895,7 +3895,7 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
-	<Style x:Key="WindowNoChromeStyle" TargetType="{x:Type Window}">
+	<Style x:Key="WindowNoTitleBarStyle" TargetType="{x:Type Window}">
 		<Setter Property="BorderThickness" Value="1" />
 		<Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
 		<Setter Property="Foreground" Value="{StaticResource Foreground}" />
