新增Arc、CircleMenu、Sector控件
1、新增Arc、CircleMenu、Sector控件
2、修复MessageControl不能自动消失的bug

--- a/src/Themes/Basic/Converters.xaml
+++ b/src/Themes/Basic/Converters.xaml
@@ -7,7 +7,7 @@
     <converter:ConstToReverseBooleanConverter x:Key="ConstToReverseBooleanConverter"/>
     <converter:ConstToReverseVisibilityConverter x:Key="ConstToReverseVisibilityConverter"/>
     <converter:ConstToVisibilityConverter x:Key="ConstToVisibilityConverter"/>
-    <converter:MultiBoolConverter x:Key="MultiBoolConverter"/>
+    <converter:MultiBooleanConverter x:Key="MultiBooleanConverter"/>
     <converter:MultiCommandParametersConverter x:Key="MultiCommandParametersConverter"/>
     <converter:MultiplicationConverter x:Key="MultiplicationConverter"/>
     <converter:ProgressBarCornerRadiusConverter x:Key="ProgressBarCornerRadiusConverter"/>
