--- a/src/Themes/Styles/Assets/ComboBox.xaml
+++ b/src/Themes/Styles/Assets/ComboBox.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
+                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach"
+                    xmlns:command="clr-namespace:WYW.UI.Commands">
   
     <Style x:Key="ComboBoxEditableTextBox" TargetType="{x:Type TextBox}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -12,8 +13,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <ScrollViewer x:Name="PART_ContentHost" Background="Transparent" Focusable="false"
+                    <Grid>
+                        <ScrollViewer x:Name="PART_ContentHost" Background="Transparent" Focusable="false"
                                   HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+                    </Grid>
+               
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -233,8 +237,8 @@
                                       IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"/>
 
                             </Border>
-                            
-                            <ContentPresenter Grid.Column="0"  IsHitTestVisible="false"
+
+                            <ContentPresenter Grid.Column="0"  IsHitTestVisible="false" x:Name="ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
                                           Content="{TemplateBinding SelectionBoxItem}"
                                           ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
@@ -277,6 +281,7 @@
                         </Trigger>
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="Visibility" TargetName="ToggleButton" Value="Collapsed"/>
+                            <Setter Property="Opacity" Value="0.6" TargetName="ContentPresenter"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="{StaticResource ForegroundDisabled}"/>
@@ -361,7 +366,7 @@
                                       attach:ButtonElement.CornerRadius="{Binding Path=(attach:ComboBoxElement.CornerRadius),RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                       IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"/>
 
-                            <ContentPresenter Grid.Column="0"  IsHitTestVisible="false"
+                            <ContentPresenter Grid.Column="0"  IsHitTestVisible="false" x:Name="ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
                                           Content="{TemplateBinding SelectionBoxItem}"
                                           ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
@@ -404,6 +409,8 @@
                         </Trigger>
                         <Trigger Property="IsReadOnly" Value="True">
                             <Setter Property="Visibility" TargetName="ToggleButton" Value="Collapsed"/>
+                            <Setter Property="Opacity" Value="0.6" TargetName="ContentPresenter"/>
+
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="{StaticResource ForegroundDisabled}"/>
