--- a/src/Themes/Styles/Assets/TextBox.xaml
+++ b/src/Themes/Styles/Assets/TextBox.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
+                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach"
+                    xmlns:command="clr-namespace:WYW.UI.Commands">
     <ControlTemplate x:Key="TextBoxErrorTemplate">
         <StackPanel Orientation="Horizontal" >
             <AdornedElementPlaceholder x:Name="adorner"  Margin="5,0"/>
@@ -74,8 +75,8 @@
                             <ColumnDefinition Width="{Binding Path=(attach:TextBoxElement.SuffixWidth),RelativeSource={RelativeSource TemplatedParent}}"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="{Binding Path=(attach:TextBoxElement.Title),RelativeSource={RelativeSource TemplatedParent}}"/>
-                        <Grid Grid.Column="1">
-                            <Border x:Name="Bd"
+                        <Grid Grid.Column="1" Name="MainGrid" >
+                            <Border x:Name="Bd" 
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 Background="{TemplateBinding Background}"
@@ -87,11 +88,17 @@
                                                             Foreground="{TemplateBinding Foreground}"/>
                                     <ScrollViewer x:Name="PART_ContentHost" RenderOptions.ClearTypeHint="Enabled"
                                                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"  
-                                                                Padding="{TemplateBinding Padding}"
-                                                                Foreground="{TemplateBinding Foreground}"/>
+                                                                Padding="{TemplateBinding Padding}"/>
                                     <TextBlock  Text="*" Foreground="Red"  HorizontalAlignment="Right" Margin="0,0,5,0"
                                                             Visibility="{Binding Path=(attach:TextBoxElement.IsNecessary),RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource ConstToVisibilityConverter}}"/>
-
+                                    <Button Grid.Column="2" Margin="0,0,5,0" attach:ButtonElement.IsNoBorder="True" HorizontalAlignment="Right"
+                                            attach:ButtonElement.IcoGeometry="{StaticResource RemoveGeometry}"
+                                            attach:ButtonElement.IcoHeight="16"
+                                            attach:ButtonElement.IcoWidth="16"
+                                            Command="{x:Static command:TextBoxCommand.ClearCommand}"
+                                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=TextBox}}"
+                                            x:Name="ClearButton" 
+                                            Visibility="Collapsed"/>
                                 </Grid>
                             </Border>
 
@@ -127,11 +134,19 @@
                         </Trigger>
                         <Trigger Property="IsReadOnly" Value="true">
                             <Setter Property="Focusable" Value="False"/>
-                            <Setter Property="Foreground"  Value="{StaticResource ForegroundReadOnly}"/>
+                            <Setter Property="Opacity" Value="0.6" TargetName="PART_ContentHost"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}"/>
                         </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="true"/>
+                                <Condition Property="IsReadOnly" Value="false"/>
+                                <Condition Property="attach:TextBoxElement.ShowClearButton" Value="True"/>
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="ClearButton" Property="Visibility" Value="Visible"/>
+                        </MultiTrigger>
                         <Trigger Property="IsFocused" Value="true">
                             <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}"/>
                         </Trigger>
@@ -146,6 +161,7 @@
                             <Setter TargetName="PopupHint" Property="IsOpen" Value="true"/>
                             <Setter TargetName="InputHint" Property="Visibility" Value="Collapsed"/>
                         </Trigger>
+                        
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Opacity" Value="0.6"/>
                             <Setter TargetName="InputHint" Property="Visibility" Value="Collapsed"/>
