--- a/test/App.xaml
+++ b/test/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/WYW.UI;component/Theme.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Mega.UI;component/Theme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
